# drum-trainer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  FLUTTER_WEB_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  main.py  pyproject.toml  test_complete_solution.py  test_drum_sound.py  test_separation.py  test_separation_improved.py
.claude/: plan_ui_fixes.md
api/: __init__.py  config.py  models.py  rate_limiter.py  server.py
api/endpoints/: __init__.py  analysis.py  demo.py  generation.py  separation.py  tracks.py  transcription.py  transcription_ast.py  transcription_madmom.py  transcription_torch.py  visits.py  youtube.py
core/: __init__.py  audio_io.py  drum_generator.py  music_analyzer.py  music_analyzer_v2.py  rhythm_detector.py  separator.py  structure_detector.py  youtube_downloader.py
drum_trainer/: __init__.py  cli.py
scripts/: install.sh  run.sh
storage/: .gitkeep
web/: .gitignore  INDEX.md  PROJECT_OVERVIEW.md  README.md  pubspec.yaml
web/lib/: main.dart
web/lib/models/: api_models.dart  track_model.dart
web/lib/screens/: analysis_screen.dart  home_screen.dart  separation_screen.dart  track_player_screen.dart
web/lib/services/: api_service.dart  audio_service.dart
web/lib/widgets/: track_card.dart  volume_slider.dart  waveform_visualizer.dart
web/web/: index.html
web_ui/: README.md  index.html
web_ui/css/: style.css
web_ui/js/: app.js
